--- a/actuworld-site/index.html
+++ b/actuworld-site/index.html
@@ -1,12 +1,19 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ActuWorld — Comprendre l'actualité</title>
+  <meta name="description" content="ActuWorld transforme l'info en connaissance : badges de vérification, score de fiabilité, fiches, quiz." />
+  <meta name="theme-color" content="#2E5F4A" />
+  <!-- Polices Platypi (titres) et Urbanist (corps) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Platypi:wght@400;500;600;700;800&family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+
+  <body class="bg-aw-bg">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
