--- a/actuworld-site/index.html
+++ b/actuworld-site/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ActuWorld — Comprendre l'actualité</title>
+  <title>ActuWorld — L'information vérifiée par tous, accessible à tous</title>
   <meta name="description" content="ActuWorld transforme l'info en connaissance : badges de vérification, score de fiabilité, fiches, quiz." />
   <meta name="theme-color" content="#2E5F4A" />
   <!-- Polices Platypi (titres) et Urbanist (corps) -->
