--- a/actuworld-site/index.html
+++ b/actuworld-site/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Platypi:wght@400;500;600;700;800&family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
-  <body class="bg-aw-bg">
+  <body class="bg-aw-bg" style="background-color:#FAF4EB">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
